taking in use ImportEntityDescription and mapping it in scopus import