@@ -3,6 +3,7 @@ package no.unit.nva.importcandidate;
 import static java.util.Objects.nonNull;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 import no.unit.nva.model.Identity;
 import no.unit.nva.model.role.RoleType;
 import nva.commons.core.JacocoGenerated;
@@ -13,6 +14,6 @@ public record ImportContributor(Identity identity, Collection<ImportOrganization
                                 Integer sequence, boolean correspondingAuthor) {
 
     public ImportContributor {
-        affiliations = nonNull(affiliations) ? Collections.unmodifiableCollection(affiliations) : Collections.emptyList();
+        affiliations = nonNull(affiliations) ? List.copyOf(affiliations) : Collections.emptyList();
     }
 }
